--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
     sdk: flutter
   intl: any
   menu_bar: ^0.5.3
+  fc_native_video_thumbnail: ^0.16.1
+  path: ^1.9.0
+  file_selector: ^1.0.3
+  tmp_path: ^1.3.2
 
 dev_dependencies:
   flutter_test:
