--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -70,6 +70,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/global_assets/green.jpg
+    - assets/fonts/
+  fonts:
+    - family: SourceSans
+      fonts:
+        - asset: assets/fonts/SourceSans3-Italic-VariableFont_wght.ttf
+          style: italic        
+        - asset: assets/fonts/SourceSans3-VariableFont_wght.ttf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
