--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   file_selector: ^1.0.3
   tmp_path: ^1.3.2
   collection: ^1.18.0
+  url_launcher: ^6.3.1
+  multi_split_view: ^3.6.0
 
 dev_dependencies:
   flutter_test:
