--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   collection: ^1.18.0
   url_launcher: ^6.3.1
   multi_split_view: ^3.6.0
+  tuple: ^2.0.2
 
 dev_dependencies:
   flutter_test:
