--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   url_launcher: ^6.3.1
   multi_split_view: ^3.6.0
   tuple: ^2.0.2
+  media_kit: ^1.1.11
+  media_kit_libs_video: ^1.0.5
+  media_kit_video: ^1.2.5
 
 dev_dependencies:
   flutter_test:
