--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   media_kit_libs_video: ^1.0.5
   media_kit_video: ^1.2.5
   uuid: ^4.5.1
+  ffmpeg_helper: ^1.0.1
 
 dev_dependencies:
   flutter_test:
