--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   media_kit_video: ^1.2.5
   uuid: ^4.5.1
   ffmpeg_helper: ^1.0.1
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
