--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   menu_bar: ^0.5.3
   fc_native_video_thumbnail: ^0.16.1
   path: ^1.9.0
-  file_selector: ^1.0.3
   tmp_path: ^1.3.2
   collection: ^1.18.0
   url_launcher: ^6.3.1
@@ -54,6 +53,7 @@ dependencies:
   uuid: ^4.5.1
   ffmpeg_helper: ^1.0.1
   rxdart: ^0.28.0
+  file_picker: ^9.2.1
 
 dev_dependencies:
   flutter_test:
