--- a/nutria_fmv_maker/pubspec.yaml
+++ b/nutria_fmv_maker/pubspec.yaml
@@ -2,7 +2,7 @@ name: nutria_fmv_maker
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -54,6 +54,7 @@ dependencies:
   ffmpeg_helper: ^1.0.1
   rxdart: ^0.28.0
   file_picker: ^9.2.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -79,13 +80,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/global_assets/green.jpg
+    - assets/icons/nutria_logo.svg
+    - assets/icons/nutria_logo_top.svg
     - assets/fonts/
   fonts:
     - family: SourceSans
       fonts:
         - asset: assets/fonts/SourceSans3-Italic-VariableFont_wght.ttf
-          style: italic        
+          style: italic
         - asset: assets/fonts/SourceSans3-VariableFont_wght.ttf
   #   - images/a_dot_ham.jpeg
 
